# devil_bot

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yaml  docker-compose.tests.yaml  docker-compose.yaml  pyproject.toml  start.sh
src/: __init__.py  buttons.py  channel_parser.py  chat_commands.py  commands.py  config.py  main.py  request.py  scheduler.py
src/menu/: buttons.py  main_menu.py  menu_help.py  menu_setting_progile.py  menu_useful_information.py  text_menu.py
src/migrations/: __init__.py  env.py  script.py.mako
src/migrations/versions/: 0b00650b103a_add_event_table.py  2737c9e3048f_update_models.py  5a46f5026091_first_migration.py  60bd0a8b023c_add_table_news.py  83b560c54101_add_in_clans_update_and_create_at.py  a06b6c3715d1_add_statistics.py  bda03662ca07_add_text_in_text_table_db.py  e1c436349113_add_thread_id.py  eaf7b0c20552_add_update_and_create_at.py
src/services/: export_to_import_db.py  reminder.py  send_message.py  statistics.py  ya_disk.py
src/services/reminder/: reminder.py  reminder_and_cleaner_rock.py  reminder_energy.py  reminder_events.py  reminder_kz.py
src/tables/: __init__.py  check_events.py  clans.py  events.py  handler_db.py  heroes_of_users.py  pg_tables.py  post_news.py  statistics.py  telegram_users.py  text_table.py  user.py
src/utils/: __init__.py  error_handler.py
tests/: conftest.py  factories.py  fixture.py  pytest.ini  test_bd.py  test_commands.py  test_main.py  test_request.py  utils.py
tests/menu/: test_main_menu.py  test_menu_setting_progile.py
tests/services/: test_ya_disk.py
tests/services/reminder/: test_reminder_and_cleaner_rock.py  test_reminder_energy.py  test_reminder_events.py  test_reminder_kz.py
